# jasmin

./: .gitignore  .gitlab-ci.yml  coqword.nix  default.nix  flake.nix
.github/workflows/: ci.yml  push-code.yml
compiler/: dune-workspace  jasmin.mlpack.in
compiler/examples/: mod_patch.jazz
compiler/src/: conv.ml  conv.mli  ct_checker_forward.ml  evaluator.ml  help.ml  inline_array_copy.ml  lexer.mli  lexer.mll  liveness.ml  main_compiler.ml  parseio.ml.orig  parseio.mli  parserMessages.messages  ppasm.ml  pretyping.ml  printLinear.ml  printer.ml  printer.mli  prog.ml  prog.mli  raw_parser.mly  regalloc.ml  regalloc.mli  stackAlloc.ml  stackAlloc.mli  subst.ml  syntax.ml  test_arch.ml  toEC.ml  toEC.mli  typing.mli  varalloc.ml  varalloc.mli  x86_test_arch.ml
language-server/: dune  jasmin-language-server.opam
language-server/controller/: documentManager.ml  documentManager.mli  dune  jasminlsp.ml  lspManager.ml  lspManager.mli  workspace.ml  workspace.mli
language-server/language/: dune  references.ml  references.mli  semanticTokens.ml  typing.ml  typing.mli
language-server/lsp/: dune  jsonRpc.ml  lspData.ml  protocol.ml  uriMap.ml
language-server/parsing/: dune  lexer.ml  parse.ml  parse.mli
language-server/sel/: dune  sel.ml  sel.mli
language-server/tests/: diagnostics.ml  dune
proofs/: _CoqProject
proofs/arch/: arch_decl.v  arch_extra.v  arch_sem.v  arch_to_expr.v  asm_gen.v  asm_gen_proof.v  label.v
proofs/compiler/: allocation.v  arch_params.v  arm_decl.v  arm_extra.v  arm_gen.v  arm_instr_decl.v  arm_linearization.v  arm_lowering.v  (+57 more)
(+24 files in other folders)
